[package]
name = "esdr"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.0.13", features = ["derive"] }
futuresdr = { version = "0.0.20", features = ["soapy", "audio"] }
futuredsp = "0.0.4"
eframe = "0.18.0"
egui_node_graph = "0.3.0"
async-task = "4.0.3"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
strum = "0.24.1"
strum_macros = "0.24.2"
